# c-code-example

Translator/: Translator.pro  codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Translator/IO/: fileinputstream.cpp  fileinputstream.h  inputstream.h  jsonparcer.h  stringinputstream.cpp  stringinputstream.h
Translator/lexicalAnalyzer/: algorythm.h  inputlexemtable.cpp  inputlexemtable.h  lexicalanalyzer.cpp  lexicalanalyzer.h  lexicalanalyzeroutput.h  statesdiagram.cpp  statesdiagram.h  utils.h
Translator/model/: translatorfacade.cpp  translatorfacade.h
Translator/rpnExecuter/: rpnexecuter.h
Translator/rpnGenerator/: booleanliteralinputitem.h  closebracketinputitem.h  condstatementendinginputitem.h  cycleoperatorendinginputitem.h  dijkstrarpngenerator.h  doinputitem.h  ifinputitem.h  inputitem.h  inputitemfactory.h  instreaminputitem.h  openbracketinputitem.h  operatorendinginputitem.h  outstreaminputitem.h  rpnlogger.h  rpnunit.h  skippedinputitem.h  theninputitem.h  uniquelabelsgenerator.cpp  uniquelabelsgenerator.h  whileinputitem.h
cpp-code-snippets/: DataStructs.sln
cpp-code-snippets/DataStructs/: CMakeLists.txt  DataStructs.cpp  DataStructs.vcxproj  DataStructs.vcxproj.filters  Iterator_base.cpp  Iterator_base.h  stdafx.cpp
cpp-code-snippets/DataStructs/DataStructs/: DataStructs.cpp  DataStructs.vcxproj  DataStructs.vcxproj.filters  FListIterator.cpp  FListIterator.h  ForwardIterator.h  ForwardIterator_type.cpp  ForwardIterator_type.h  IteratorAlgorithms.h  Iterator_base.h  ListNodes.h  TemplateMagic.h  Traits.h
(+23 files in other folders)
